martian-derive/tests/ui_martian_struct/derive_on_enum.stderr
error: #[derive(MartianStruct)] can only be used on structs with named fields.
 --> $DIR/derive_on_enum.rs:4:1
  |
4 | enum Foo {
  | ^^^^
