martian-derive/tests/ui_martian_struct/derive_on_enum.rs
use martian_derive::MartianStruct;

#[derive(MartianStruct)]
enum Foo {
    A,
    B,
}

fn main() {}
